--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -328,6 +328,11 @@
         }
       }
 
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      -webkit-transform: translate3d(0, 0, 0);
+      -moz-transform: translate3d(0, 0, 0);
+
       height: 5.25rem;
       width: 5.25rem;
       fill: variables.$color-white;
